--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .JDK 8/
 Week 9 - Advanced Data Visualisation/.venv
 Week 10 - Advanced Statistical Methods for AI/.venv
+Assessments/pyspark_assessment/JDK 8
