--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 Week 9 - Advanced Data Visualisation/.venv
 Week 10 - Advanced Statistical Methods for AI/.venv
 Assessments/pyspark_assessment/JDK 8
+Assessments/pyspark_assessment/.venv
